--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@ Sangam Designs-About
        <div class="logo"> <h1 class="animate__animated animate__fadeInLeft">Sangam<span class="color">Designs</span></h1>
        </div>
        <div class="menu">
-           <a class="animate__animated animate__fadeInRight" href="file:///D:/Work%20Place/HTML/Website/My%20Website/index.html">Home</a>
-           <a class="animate__animated animate__fadeInRight" href="file:///D:/Work%20Place/HTML/Website/My%20Website/about.html"><span class="color1">About us</span></a>
-           <a class="animate__animated animate__fadeInRight" href="file:///D:/Work%20Place/HTML/Website/My%20Website/Portfolio.html">Portfolio</a>
+           <a class="animate__animated animate__fadeInRight" href="https://shaishavkumar.github.io/mywebsite/">Home</a>
+           <a class="animate__animated animate__fadeInRight" href="https://shaishavkumar.github.io/mywebsite/about"><span class="color1">About us</span></a>
+           <a class="animate__animated animate__fadeInRight" href="https://shaishavkumar.github.io/mywebsite/Portfolio">Portfolio</a>
            <a class="animate__animated animate__fadeInRight" href="https://kumarshaishav.wordpress.com/" target="_blank">Blog</a>
        </div>
    </nav>
