--- a/Portfolio.html
+++ b/Portfolio.html
@@ -17,9 +17,9 @@ Sangam Designs-Portfolio
        <div class="logo"> <h1 class="animate__animated animate__fadeInLeft">Sangam<span class="color">Designs</span></h1>
        </div>
        <div class="menu">
-           <a class="animate__animated animate__fadeInRight" href="file:///D:/Work%20Place/HTML/Website/My%20Website/index.html">Home</a>
-           <a class="animate__animated animate__fadeInRight" href="file:///D:/Work%20Place/HTML/Website/My%20Website/about.html">About us</a>
-           <a class="animate__animated animate__fadeInRight" href="file:///D:/Work%20Place/HTML/Website/My%20Website/Portfolio.html"><span class="color1">Portfolio</span></a>
+           <a class="animate__animated animate__fadeInRight" href="https://shaishavkumar.github.io/mywebsite/">Home</a>
+           <a class="animate__animated animate__fadeInRight" href="https://shaishavkumar.github.io/mywebsite/about">About us</a>
+           <a class="animate__animated animate__fadeInRight" href="https://shaishavkumar.github.io/mywebsite/Portfolio"><span class="color1">Portfolio</span></a>
            <a class="animate__animated animate__fadeInRight" href="https://kumarshaishav.wordpress.com/" target="_blank">Blog</a>
        </div>
    </nav>
